<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
	    android:layout_width="100px" 
	    android:layout_height="wrap_content"
	    android:text="@string/postTitle"
	    android:id="@+id/updateTitle"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    />
	<TextView  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    android:text="@string/locUnavailable"
	    android:id="@+id/updateLocStatus"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    />
	<EditText  
		android:id="@+id/updateText" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_below="@id/updateTitle"
		android:maxLength="255"
		android:maxLines="4"
		android:lines="4"
		android:gravity="top"
		/>
	<Button 
		android:text="@string/attachBtn" 
		android:id="@+id/attachBtn" 
		android:layout_width="125px" 
		android:layout_height="50px"
		android:layout_below="@id/updateText"
		android:layout_alignParentLeft="true"
		android:onClick="onAttach"
		/>
	<Button 
		android:text="@string/updateOk" 
		android:id="@+id/updateOkBtn" 
		android:layout_width="125px" 
		android:layout_height="50px"
		android:layout_below="@id/attachBtn"
		android:layout_alignParentLeft="true"
		android:onClick="onUpdate"
		/>
	<Button 
		android:text="@string/updateCancel" 
		android:id="@+id/updateCancelBtn" 
		android:layout_width="125px" 
		android:layout_height="50px"
		android:layout_below="@id/attachBtn"
		android:layout_alignParentRight="true"
		/>
</RelativeLayout>
